fixed header visibility issues

--- a/styles/header.css
+++ b/styles/header.css
@@ -29,7 +29,7 @@
 .header {
     width: 100%;
     display: grid;
-    grid-template-columns: 1fr 10fr 1fr;
+    grid-template-columns: 1fr 10fr;
     column-gap: 30px;
     width: 100%;
 }
@@ -51,6 +51,7 @@
 }
 
 .resume-link {
+    margin-left: 20px;
     padding-left: 18px;
     padding-right: 18px;
     border-style: solid;
@@ -71,7 +72,3 @@
     justify-content: flex-end;
     align-items: center;
 }
-
-
-
-
